# MGE-Platform

./: CHANGELOG.md  CLEANUP_INSTRUCTIONS.md  CMakeLists.txt  README.md  RELEASE_NOTES.md  RELEASE_NOTES1.md  REVIEW_REPORT.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
Documentation/: ARCHITECTURE.md  CHANGELOG.md  CODE_STYLE.md  CONTRIBUTING.md  DOXYGEN.md  ROADMAP.md
Firmware/Core/include/mge/core/: config.h  error.h  result.h  types.h  version.h
Firmware/Libraries/ASN1/: CMakeLists.txt
Firmware/Libraries/ASN1/docs/: DATASET.md  FOUNDATION.md
Firmware/Libraries/ASN1/examples/: asn1_dataset_example.cpp  asn1_foundation_example.cpp
Firmware/Libraries/ASN1/include/mge/asn1/: asn1_dataset.h  asn1_decoder.h  asn1_encoder.h  asn1_type.h  asn1_value.h
Firmware/Libraries/ASN1/src/: asn1_decoder.cpp  asn1_encoder.cpp
Firmware/Libraries/ASN1/tests/: asn1_dataset_test.cpp  asn1_foundation_test.cpp
Firmware/Libraries/BER/docs/: CONSTRUCTED_AND_OID.md  STRING_TYPES.md
Firmware/Libraries/BER/examples/: ber_constructed_oid_example.cpp  ber_string_types_example.cpp
Firmware/Libraries/BER/include/mge/ber/: ber_constructed.h  ber_string_types.h
Firmware/Libraries/BER/tests/: ber_constructed_oid_test.cpp  ber_string_types_test.cpp
Firmware/Libraries/Core/include/mge/core/: endian.h  platform.h
Firmware/Libraries/Ethernet/include/mge/ethernet/: ethernet_builder.h  ethernet_frame.h
Firmware/Libraries/Ethernet/src/: ethernet_builder.cpp
Firmware/Libraries/Ethernet/tests/: ethernet_builder_test.cpp
Firmware/Libraries/GOOSE/: CMakeLists.txt
Firmware/Libraries/GOOSE/docs/: APDU_DECODER.md  APDU_ENCODER.md  FOUNDATION.md  FRAME_DECODER.md  FRAME_ENCODER.md
Firmware/Libraries/GOOSE/examples/: goose_apdu_decoder_example.cpp  goose_apdu_encoder_example.cpp  goose_foundation_example.cpp  goose_frame_decoder_example.cpp  goose_frame_encoder_example.cpp
Firmware/Libraries/GOOSE/include/mge/goose/: goose_apdu_decoder.h  goose_apdu_encoder.h  goose_constants.h  goose_control_block.h  goose_dataset.h  goose_frame_decoder.h  goose_frame_encoder.h  goose_header.h  goose_message.h  goose_types.h
Firmware/Libraries/GOOSE/src/: goose_apdu_decoder.cpp  goose_apdu_encoder.cpp  goose_control_block.cpp  goose_header.cpp
Firmware/Libraries/GOOSE/tests/: goose_apdu_decoder_test.cpp  goose_apdu_encoder_test.cpp  goose_foundation_test.cpp  goose_frame_decoder_test.cpp  goose_frame_encoder_test.cpp
Firmware/Logic/: README.md
Firmware/MGE-ASN1/: README.md
Firmware/MGE-GOOSE/: README.md
Firmware/MGE-IED/: README.md
Firmware/MGE-W5500/: README.md
Firmware/libraries/ASN1/: README.md
Firmware/libraries/BER/: CMakeLists.txt  README.md
Firmware/libraries/BER/docs/: INTEGRATION-004.2.md  INTEGRATION.md  PRIMITIVE_TYPES.md  REFERENCE.md
Firmware/libraries/BER/examples/: ber_foundation_example.cpp  ber_primitive_types_example.cpp
Firmware/libraries/BER/include/mge/ber/: ber_decoder.h  ber_encoder.h  ber_length.h  ber_tag.h
Firmware/libraries/BER/src/: ber_decoder.cpp  ber_encoder.cpp  ber_length.cpp
Firmware/libraries/BER/tests/: ber_foundation_test.cpp  ber_primitive_types_test.cpp
Firmware/libraries/Core/: CMakeLists.txt  README.md
Firmware/libraries/Core/include/mge/core/: buffer.h  buffer_reader.h  buffer_view.h  buffer_writer.h  error.h
Firmware/libraries/Core/src/: buffer_reader.cpp  buffer_writer.cpp
Firmware/libraries/Core/tests/: buffer_reader_test.cpp  buffer_writer_test.cpp
Firmware/libraries/Ethernet/: CMake-v0.3.0-snippet.txt  CMakeLists.txt  README.md
Firmware/libraries/Ethernet/docs/: ethernet_parser.md  mac_address.md
Firmware/libraries/Ethernet/examples/: ethernet_parser_example.cpp  mac_address_example.cpp
Firmware/libraries/Ethernet/include/mge/ethernet/: ether_type.h  ethernet_parser.h  mac_address.h
Firmware/libraries/Ethernet/src/: ethernet_parser.cpp  mac_address.cpp
Firmware/libraries/Ethernet/tests/: ethernet_parser_test.cpp  mac_address_test.cpp
Firmware/libraries/GOOSE/: README.md
