cmake_minimum_required(VERSION 3.16)
project(MGE-Platform VERSION 0.3.9 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
enable_testing()
add_subdirectory(Firmware/Libraries/Core)
add_subdirectory(Firmware/Libraries/Ethernet)
add_subdirectory(Firmware/Libraries/BER)
