cmake_minimum_required(VERSION 3.16)
project(MGE-Ethernet VERSION 0.3.9 LANGUAGES CXX)
add_library(mge-ethernet STATIC src/mac_address.cpp src/ethernet_builder.cpp src/ethernet_parser.cpp)
target_include_directories(mge-ethernet PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(mge-ethernet PUBLIC mge-core)
target_compile_features(mge-ethernet PUBLIC cxx_std_17)
add_executable(mac_address_test tests/mac_address_test.cpp)
target_link_libraries(mac_address_test PRIVATE mge-ethernet)
add_test(NAME mac_address_test COMMAND mac_address_test)
add_executable(ethernet_builder_test tests/ethernet_builder_test.cpp)
target_link_libraries(ethernet_builder_test PRIVATE mge-ethernet)
add_test(NAME ethernet_builder_test COMMAND ethernet_builder_test)
add_executable(ethernet_parser_test tests/ethernet_parser_test.cpp)
target_link_libraries(ethernet_parser_test PRIVATE mge-ethernet)
add_test(NAME ethernet_parser_test COMMAND ethernet_parser_test)
